--- a/app/src/main/res/layout/content_cigarette_counter.xml
+++ b/app/src/main/res/layout/content_cigarette_counter.xml
@@ -74,7 +74,8 @@
         android:layout_marginLeft="60dp"
         android:layout_marginRight="60dp"
         android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp" />
+        android:layout_marginBottom="10dp"
+        android:onClick="editPastDays" />
 
     <Button
         android:layout_width="match_parent"
