--- a/app/src/main/res/layout/activity_edit_past_days.xml
+++ b/app/src/main/res/layout/activity_edit_past_days.xml
@@ -66,12 +66,36 @@
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp" />
 
-    <EditText
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="0"
-        android:id="@+id/numCigsOnDateView"
-        android:inputType="number"
-        android:gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal">
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight = "1"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="0"
+            android:id="@+id/numCigsOnDateView"
+            android:inputType="number"
+            android:gravity="center_horizontal" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight = "0"
+            android:background="@drawable/buttonshape"
+            android:shadowColor="@color/myLightBlue"
+            android:shadowDx="0"
+            android:shadowDy="0"
+            android:shadowRadius="5"
+            android:text="Update"
+            android:id="@+id/submitNewValue"
+            android:onClick="updateNewValue" />
+
+    </LinearLayout>
+
+
 </LinearLayout>
